--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,9 @@
 services:
   - type: web
-    name: shellcoach-terminal
+    name: shellcoach-app
     env: python
+    buildCommand: "pip install -r requirements.txt"
+    startCommand: "gunicorn app:app"
     plan: free
-    buildCommand: ""
-    startCommand: gunicorn app:app
+    branch: main
+    autoDeploy: true
